--- a/code port/code.css
+++ b/code port/code.css
@@ -1,61 +1,53 @@
-body{
-    margin: 0px;
-}
-
-a{
-    all: unset;
-}
-
 /* NAV BEGIN */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  .navwrap{
+}
+
+.navwrap{
     z-index: 50;
     width: 100%;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
     background-color: #fff;
-  }
-  
-  .navbar{
+}
+
+.navbar{
     background-color: whitesmoke;
     overflow: hidden;
     position: fixed;
     width: 100%;
     z-index: 50;
-  
+
     display:flex;
     justify-content: space-evenly;
     color: black;
     text-align: center;
     text-decoration: none;
-    top: -100px;
+    top: -1px;
     transition: top 0.3s;
-  }
-  
-  .myname a, .navbar a:not(.skip){
-    font-size: 14px;
+}
+
+.myname a, .navbar a:not(.skip){
+    font-size: 18px;
     cursor: pointer;
     padding: 1%;
-  }
-  
-  .navbar a:not(.myname){
+}
+
+.navbar a:not(.myname){
     padding-left: 7%;
     padding-right: 7%;
     transition: background-color 0.3s ease-out;
-  }
-  
-  .navbar a:hover:not(.myname,.skip){
+}
+
+.navbar a:hover:not(.myname,.skip){
     color: whitesmoke;
     background-color: black;
-  }
+}
 
-  @media only screen and (min-width: 53px) and (max-width: 530px){
+@media only screen and (min-width: 53px) and (max-width: 540px){
     .skip {
         display: none;
     }
@@ -72,25 +64,33 @@ a{
     .myname a, .navbar a:not(.skip){
         padding-top: 3%;
         padding-bottom: 2%;
-      }
-  
-  }
-  
-  /* NAV END */
+        }
+}
+@media only screen and (min-width: 1440px) and (max-width: 5000px){
+    .myname a, .navbar a:not(.skip){
+        font-size: 20px;
+    }
+}
 
-.title > h1{
-    text-align: center;
-    margin-top: 1%;
-    margin-bottom: 2%;
+/* NAV END */
+
+body{
+    margin: 0px;
+}
+
+a{
+    all: unset;
 }
 
 .project > h2{
-    animation: popoff 2s forwards;
-    margin-bottom: 2%;
+    margin-top: 10%;
+    animation: popUp 1.5s forwards;
+    margin-bottom: 1%;
+    opacity: 0%;
 }
 
-@keyframes popoff{
-    from {opacity:0%; transform: translateY(20px);}
+@keyframes popUp{
+    from {}
     to {opacity: 100%;}
 }
 
@@ -98,71 +98,100 @@ a{
     display: flex;
     justify-content: space-evenly;
     padding-left: 8%;
-    padding-right: 7%;
+    padding-right: 8%;
 }
 
-.evidence, .linkslide, .linkgit{
-    display: block;
-}
+.show{
+    user-select: none;
+    margin-left: .5%;
+    margin-right: .5%;
 
-.evidence > a > img, .linkslide > a > img, .linkgit > a > img{
-    animation: side 2s forwards .5s;
-    border-radius: 50px;
-    border: solid black 2px;
-    cursor: pointer;
-    transition: transform .3s ease-in-out;
-    opacity: 0%;
-}
-
-@keyframes side{
-    from {transform:translateX(-50px);}
-    to {opacity: 100%;}
-}
-
-.evidence > a > img:hover, .linkslide > a > img:hover, .linkgit > a > img:hover{
-    transform: scale(101%);
 }
 
 .show > img{
+    width: 650px;
     margin-top: 2px;
-    border-radius: 50px;
+    border-radius: 25px;
     border: solid black 2px;
-    animation: gifpreview 2s forwards .5s;
+    animation: slidein 1.5s forwards .2s;
     opacity: 0%;
+
+    transition: .3s ease;
 }
 
-@keyframes gifpreview {
-    from {transform:translateX(-50px);}
-    to {opacity: 100%;}
+.evidence, .linkslide, .linkgit{
+    position: relative;
+    display: block;
 }
+
+.imageFrame{
+    width: 250px;
+    border-radius: 25px;
+    border: solid black 2px;
+    cursor: pointer;
+    animation: slidein 1.5s forwards .2s;
+    opacity: 0%;
+    transition: .3s ease; 
+}
+
+.imageFrame:hover{
+	filter: blur(1.5px) grayscale(100%);
+}
+
+.linkslide .text, .linkgit .text{    
+    position: absolute;
+    top: 50%;
+    left: 50%;  
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 20px;
+    user-select: none;
+    cursor: pointer;
+    border-radius: 10px;
+
+    opacity: 0%;
+    transition: .5s ease; 
+}
+ 
+.linkslide:hover .text, .linkgit:hover .text{
+    opacity: 100%;
+}
+
+.linkslide .text:hover{
+    background-color: rgba(153, 218, 248, 0.795);
+}
+.linkgit .text:hover{
+    background-color: rgba(17, 117, 167, 0.904);
+}
+
 
 .explain{
+    margin: auto;
     margin-top: 1%;
-    padding-right: 5%;
-    padding-left: 5%;
 }
 
 .explain > h4{
     opacity: 0%;
-    animation: appear 2s forwards 1s;
+    animation: slideUp 1.5s forwards .4s;
 }
 
 .explain > p{
-    margin-top: 1%;
+    margin: 2%;
+    margin-bottom: 0%;
     padding: 2%;
-    border-radius: 50px;
+    border-radius: 25px;
     border: solid black 2px;
     opacity: 0%;
-    animation: appearagain 2s forwards 1.5s;
+    animation: slideUp 2s forwards .6s;
 }
 
-@keyframes appear{
-    from {transform: translateY(50px);}
-    to {opacity:100%;}
+@keyframes slidein {
+    from {transform:translateX(-20px);}
+    to {opacity: 100%;}
 }
 
-@keyframes appearagain{
-    from {transform: translateY(50px);}
+@keyframes slideUp{
+    from {transform: translateY(20px);}
     to {opacity:100%;}
 }
 
@@ -189,10 +218,10 @@ a{
     width: auto;
     margin-top: -22px;
     padding: 16px; 
-    color: rgb(253, 166, 166);
+    color: black;
     font-weight: bold;
     font-size: 18px;
-    transition: 0.5s ease;
+    transition: 0.3s ease;
     border-radius: 10px;
     user-select: none;
 }
@@ -203,7 +232,7 @@ a{
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-    background-color:  rgb(253, 166, 166);
+    background-color:  black;
     color: white;
 }
 
@@ -217,7 +246,7 @@ a{
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
-    animation: lastone 2s forwards 2s;
+    animation: dots 2s forwards 1.2s;
     opacity: 0%;
  }
 
@@ -225,7 +254,26 @@ a{
     background-color: #717171;
 }
 
-@keyframes lastone{
-    from {opacity: 0%; transform:translateY(10);}
-    to {opacity: 100%; transform:translateY(-10px);}
+@keyframes dots{
+    from {transform:translateY(20px);}
+    to {opacity: 100%;}
+}
+
+@media only screen and (min-width:1440px) and (max-width:5000px){
+    .project > h2{
+        margin-top: 4%;
+    }
+    .order{
+        max-width: 1900px;
+    }
+    .show > img{
+        width: 900px;
+    }
+    .imageFrame{
+        width: 350px;
+    }
+    .explain{
+        max-width: 1500px;
+        font-size: 20px;
+    }
 }
