--- a/contact/contact.css
+++ b/contact/contact.css
@@ -13,31 +13,8 @@
   top: 0;
   background-color: #fff;
 }
-
-.gradient-bar{
-  width: 100%;
-  height: 5px;
-  background: linear-gradient(-45deg,#99E1E5, #F4BFBF);
-  background-size: 400% 400%;
-  -webkit-animation: gradbar 15s ease infinite;
-  -moz-animation: gradbar 15s ease infinite;
-  animation: gradbar 15s ease infinite;
-}
-
-@keyframes gradbar {
-0% {background-position: 0% 50%}
-50% {background-position: 100% 50%}
-100% {background-position: 0% 50%}
-}
-
-@-moz-keyframes gradbar {
-0% {background-position: 0% 50%}
-50% {background-position: 100% 50%}
-100% {background-position: 0% 50%}
-}
-
+  
 .navbar{
-  margin-top:5px;
   background-color: whitesmoke;
   overflow: hidden;
   position: fixed;
@@ -69,12 +46,73 @@
   color: whitesmoke;
   background-color: black;
 }
+
+@media only screen and (min-width: 53px) and (max-width: 540px){
+  .skip {
+      display: none;
+  }
+
+  .navbar {
+      height: 50px;
+  }
+
+  .navbar a:not(.myname){
+      padding: 2%;
+      padding-top: 3%;
+  }
+
+  .myname a, .navbar a:not(.skip){
+      padding-top: 3%;
+      padding-bottom: 2%;
+    }
+}
+@media only screen and (min-width: 1440px) and (max-width: 5000px){
+  .myname a, .navbar a:not(.skip){
+      font-size: 20px;
+    }
+}
+
 /* NAV END */
 
 body{
   text-align: center;
+  margin: auto; 
+}
+
+.contactWrapper{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* .reachOpt{
+  text-align: center;
+  margin: auto;
+} */
+
+#choiceGithub, #choiceEmail, #choiceLinkedIn{
+  text-align: center;
   margin: auto;
 }
+
+.sub{
+  cursor: pointer;
+  border: black solid 2px;
+  border-radius: 25px;
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+
+/* GitHub Section */
+
+.githubSection{
+  border: solid 2px black;
+  border-radius: 25px;
+  padding: 5%;
+  min-width: 400px;
+  max-width: 500px;
+}
+
+/* Email Section */
 
 #title{
   margin-top: 8%;
@@ -85,8 +123,9 @@ body{
   margin: auto;
   border: solid rgba(25, 25, 48, 0.884) 2px;
   border-radius: 25px;
-  width: 50%;
+  min-width: 600px;
   margin-bottom: 1%;
+  box-shadow: rgb(67, 9, 122) 1px 1px
 }
 
 .whotoandfrom:not(.except){
@@ -115,25 +154,24 @@ button{
   all: unset;
 }
 
-.buttons{
-  margin: auto;
-  display: flex;
-  justify-content: space-evenly;
+#gobutton{
+  display: none;
 }
 
-#copybutton, #gobutton, #sendbutton{
-  all:unset;
+#gobutton, #sendbutton{
+  margin: auto;
   border: solid rgba(25, 25, 48, 0.884) 2px;
   border-radius: 10px;
   max-width: 100px;
   padding: .2% 1.5%;
   cursor: pointer;
   transition: transform .2s ease-in-out, box-shadow .2s ease-in-out, background-color .2s ease-in-out;
+  box-shadow: rgb(67, 9, 122) 1px 1px;
 }
 
-#copybutton:hover, #gobutton:hover, #sendbutton:hover{
+#gobutton:hover, #sendbutton:hover{
   transform: scale(115%);
-  box-shadow: black 1px 1px;
+  box-shadow: none;
   background-color: rgba(26, 9, 65, 0.137);
 }
 
@@ -141,7 +179,7 @@ a{
   all: unset;
 }
 
-@media only screen and (max-width:900px){
+@media only screen and (min-width: 630px) and (max-width:900px){
 
   .whotoandfrom:not(.except){
     border-bottom: solid rgba(25, 25, 48, 0.884) 2px;
@@ -153,5 +191,76 @@ a{
     margin-top: 1%;
     border-bottom: solid rgba(25, 25, 48, 0.884) 2px;
   }  
-  
+
+  .email{
+    min-width: 500px;
+  }
+
 }
+
+@media only screen and (min-width: 58px) and (max-width:629px){
+
+  .whotoandfrom:not(.except){
+    border-bottom: solid rgba(25, 25, 48, 0.884) 2px;
+    padding: 1%;
+    display: block;
+  }
+
+  .border{
+    margin-top: 1%;
+    border-bottom: solid rgba(25, 25, 48, 0.884) 2px;
+  }  
+
+  .email{
+    min-width: 400px;
+  }
+
+}
+
+/* LinkedIn Section */
+
+.linkedInSection{
+  /* display: none; */
+  display: block;
+  min-width: 400px;
+  max-width: 500px;
+}
+
+.linkedIn, .info, .bio, .connect{
+  padding: 2%;
+  margin-bottom: 2%;
+  border-radius: 5px;
+}
+
+.info{
+  margin-bottom: 0%;
+}
+
+.linkedIn{
+  border: solid black 2px;
+}
+
+#me{
+  border: solid 2px black;
+  border-radius: 50%;
+  margin: 1%;
+}
+
+.backDrop{
+  text-align: left;
+  border-bottom: solid 2px;
+  border-image: linear-gradient(90deg, rgba(0,0,0,0), #000000da, #000000da, rgba(0,0,0,0)) 1;
+}
+
+.bio{
+  border: solid 2px black;
+}
+
+.connect{
+  border: solid 2px black;
+  cursor: pointer;
+}
+
+/* #choiceGithub, #choiceLinkedIn, #choiceEmail{
+  display: none;
+} */
