--- a/portfolio/drawings.css
+++ b/portfolio/drawings.css
@@ -209,7 +209,7 @@ body{
     color: whitesmoke;
     margin-bottom: 1%;
     opacity: 0%;
-    animation: seeMore 1s forwards;
+    animation: seeMore .5s forwards;
 }
 
 .calledTop{
@@ -227,7 +227,7 @@ body{
     min-width: 700px;
     display: block;
     opacity: 0%;
-    animation: seeMore 1s forwards;
+    animation: seeMore .5s forwards;
 }
 
 #details{
@@ -240,7 +240,7 @@ body{
     color: whitesmoke;
     margin: auto;
     opacity: 0%;
-    animation: seeMore 1s forwards;
+    animation: seeMore .5s forwards;
 }
 
 @keyframes seeMore{
