--- a/design.css
+++ b/design.css
@@ -1,4 +1,7 @@
 /* Default */
+html{
+    scroll-behavior: smooth;
+}
 a{
     all:unset;
 }
@@ -89,13 +92,13 @@ a{
 }
 
 #first{
-    animation: descend 1.5s forwards 2.4s;
+    animation: descend 1.5s forwards 1.3s;
 }
 #second{
-    animation: descend 1.5s forwards 3s;
+    animation: descend 1.5s forwards 1.6s;
 }
 #third{
-    animation: descend 1.5s forwards 3.4s;
+    animation: descend 1.5s forwards 1.9s;
 }
 
 @keyframes descend{
@@ -103,8 +106,21 @@ a{
     to {opacity: 100%;}
 }
 
+/* HEIGHT ISSUE */
+@media only screen and (min-width: 721px) and (max-width: 1209px) and (min-height: 700px) and (max-height: 5000px){
+    .clickables{
+        padding-top: 10%;
+    }
+}
+@media only screen and (min-width: 1210px) and (max-width: 1400px) and (min-height: 700px) and (max-height: 5000px){
+    .clickables{
+        padding-top: 10%;
+    }
+}
+
+
 /* MOBILE SIZE */
-@media only screen and (min-width:300px) and (max-width: 375px){
+@media only screen and (min-width:0px) and (max-width: 375px){
 
     .back{
         margin: auto;
@@ -125,7 +141,7 @@ a{
         margin-top: -2%;
         text-align: center;
         width: 300px;
-        animation: judy 2s forwards 2s;
+        animation: judy 2s forwards 1.2s;
         transform: translateY(650px);
     }
 
@@ -148,7 +164,7 @@ a{
     .greetings > h3{
         color: whitesmoke;
         opacity: 0%;
-        animation: introtojudy 2s forwards 2s;    
+        animation: introtojudy 2s forwards 1.2s;    
         transform: translateY(500px);
         transition: color .3s ease-in-out;
     }
@@ -172,18 +188,18 @@ a{
     }
     .shorten > #e{
         margin-right: 10%;
-        animation: welcome 1.5s forwards .5s;
+        animation: welcome 1.5s forwards .3s;
     }
     .shorten > #l{
         margin-left: 10%;
-        animation: welcome 1.5s forwards 1s;
+        animation: welcome 1.5s forwards .6s;
     }
     #c{
-        animation: welcome 1.5s forwards 1.5s;
+        animation: welcome 1.5s forwards .9s;
     }
     
     @keyframes welcome{
-        from {transform: translateY(40px);}
+        from {transform: translateY(20px);}
         to {opacity: 100%;}
     }
 
@@ -233,7 +249,7 @@ a{
         margin-bottom: 5%;
         transform: translateY(0px);
         width: 300px;
-        animation: judy 1.5s forwards 2s;
+        animation: judy 1.5s forwards 1.2s;
     }
 
     @keyframes judy {
@@ -258,7 +274,7 @@ a{
         margin-right: 10%;
         transform: translateY(0px);
         opacity: 0%;
-        animation: introtojudy 2s forwards 2s;    
+        animation: introtojudy 2s forwards 1.2s;    
     }
 
     @keyframes introtojudy{
@@ -278,18 +294,18 @@ a{
     }
     .shorten > #e{
         margin-right: 10%;
-        animation: welcome 1.5s forwards .5s;
+        animation: welcome 1.5s forwards .3s;
     }
     .shorten > #l{
         margin-left: 10%;
-        animation: welcome 1.5s forwards 1s;
+        animation: welcome 1.5s forwards .6s;
     }
     #c{
-        animation: welcome 1.5s forwards 1.5s;
+        animation: welcome 1.5s forwards .9s;
     }
 
     @keyframes welcome{
-        from {transform: translateY(-40px);}
+        from {transform: translateY(-20px);}
         to {opacity: 100%;}
     }
 
@@ -345,7 +361,7 @@ a{
         margin-bottom: 5%;
         transform: translateY(0px);
         width: 300px;
-        animation: judy 1.5s forwards 2s;
+        animation: judy 1.5s forwards 1.2s;
     }
 
     @keyframes judy {
@@ -369,7 +385,7 @@ a{
     .greetings > h3{
         transform: translateY(0px);
         opacity: 0%;
-        animation: introtojudy 2s forwards 2s;    
+        animation: introtojudy 2s forwards 1.2s;    
     }
 
     @keyframes introtojudy{
@@ -387,18 +403,18 @@ a{
     }
     .shorten > #e{
         margin-right: 3%;
-        animation: welcome 1.5s forwards .5s;
+        animation: welcome 1.5s forwards .3s;
     }
     .shorten > #l{
         margin-left: 3%;
-        animation: welcome 1.5s forwards 1s;
+        animation: welcome 1.5s forwards .6s;
     }
     #c{
-        animation: welcome 1.5s forwards 1.5s;
+        animation: welcome 1.5s forwards .9s;
     }
 
     @keyframes welcome{
-        from {transform: translateY(-40px);}
+        from {transform: translateY(-20px);}
         to {opacity: 100%;}
     }
 
@@ -454,7 +470,7 @@ a{
         margin-bottom: 2%;
         transform: translateY(0px);
         width: 250px;
-        animation: judy 1.5s forwards 2s;
+        animation: judy 1.5s forwards 1.2s;
     }
 
     @keyframes judy {
@@ -478,7 +494,7 @@ a{
     .greetings > h3{
         transform: translateY(0px);
         opacity: 0%;
-        animation: introtojudy 2s forwards 2s;    
+        animation: introtojudy 2s forwards 1.2s;    
     }
 
     @keyframes introtojudy{
@@ -498,18 +514,18 @@ a{
     }
     .shorten > #e{
         margin-right: 3%;
-        animation: welcome 1.5s forwards .5s;
+        animation: welcome 1.5s forwards .3s;
     }
     .shorten > #l{
         margin-left: 3%;
-        animation: welcome 1.5s forwards 1s;
+        animation: welcome 1.5s forwards .6s;
     }
     #c{
-        animation: welcome 1.5s forwards 1.5s;
+        animation: welcome 1.5s forwards .9s;
     }
 
     @keyframes welcome{
-        from {transform: translateY(-40px);}
+        from {transform: translateY(-20px);}
         to {opacity: 100%;}
     }
 
@@ -561,7 +577,7 @@ a{
         margin-left: 30%;
         text-align: center;
         width: 300px;
-        animation: judy 1.5s forwards 2s;
+        animation: judy 1.5s forwards 1.2s;
     }
 
     @keyframes judy {
@@ -583,7 +599,7 @@ a{
     .greetings > h3{
         transform: translateY(0px);
         opacity: 0%;
-        animation: introtojudy 2s forwards 2s;    
+        animation: introtojudy 2s forwards 1.2s;    
     }
 
     @keyframes introtojudy{
@@ -603,18 +619,18 @@ a{
     }
     .shorten > #e{
         margin-right: 5%;
-        animation: welcome 1.5s forwards .5s;
+        animation: welcome 1.5s forwards .3s;
     }
     .shorten > #l{
         margin-left: 5%;
-        animation: welcome 1.5s forwards 1s;
+        animation: welcome 1.5s forwards .6s;
     }
     #c{
-        animation: welcome 1.5s forwards 1.5s;
+        animation: welcome 1.5s forwards .9s;
     }
 
     @keyframes welcome{
-        from {transform: translateY(-40px);}
+        from {transform: translateY(-20px);}
         to {opacity: 100%;}
     }
 
@@ -628,7 +644,7 @@ a{
     }
 
     .section > a > img{
-        width: 200px;
+        width: 205px;
     }
 
     .section > a > h2{
@@ -664,7 +680,7 @@ a{
         margin-left: 15%;
         text-align: center;
         width: 350px;
-        animation: judy 1.5s forwards 2s;
+        animation: judy 1.5s forwards 1.2s;
     }
     
     @keyframes judy {
@@ -687,7 +703,7 @@ a{
         font-size: 25px;
         transform: translateY(0px);
         opacity: 0%;
-        animation: introtojudy 2s forwards 2s;    
+        animation: introtojudy 2s forwards 1.2s;    
     }
     
     @keyframes introtojudy{
@@ -707,18 +723,18 @@ a{
     }
     .shorten > #e{
         margin-right: 5%;
-        animation: welcome 1.5s forwards .5s;
+        animation: welcome 1.5s forwards .3s;
     }
     .shorten > #l{
         margin-left: 5%;
-        animation: welcome 1.5s forwards 1s;
+        animation: welcome 1.5s forwards .6s;
     }
     #c{
-        animation: welcome 1.5s forwards 1.5s;
+        animation: welcome 1.5s forwards .9s;
     }
     
     @keyframes welcome{
-        from {transform: translateY(-40px);}
+        from {transform: translateY(-20px);}
         to {opacity: 100%;}
     }
     
@@ -769,7 +785,7 @@ a{
         margin-left: 30%;
         text-align: center;
         width: 350px;
-        animation: judy 1.5s forwards 2s;
+        animation: judy 1.5s forwards 1.2s;
     }
     
     @keyframes judy {
@@ -792,7 +808,7 @@ a{
         font-size: 25px;
         transform: translateY(0px);
         opacity: 0%;
-        animation: introtojudy 2s forwards 2s;    
+        animation: introtojudy 2s forwards 1.2s;    
     }
     
     @keyframes introtojudy{
@@ -812,17 +828,17 @@ a{
     }
     .shorten > #e{
         margin-right: 5%;
-        animation: welcome 1.5s forwards .5s;
+        animation: welcome 1.5s forwards .3s;
     }
     .shorten > #l{
         margin-left: 5%;
-        animation: welcome 1.5s forwards 1s;
+        animation: welcome 1.5s forwards .6s;
     }
     #c{
-        animation: welcome 1.5s forwards 1.5s;
+        animation: welcome 1.5s forwards .9s;
     }
     @keyframes welcome{
-        from {transform: translateY(-40px);}
+        from {transform: translateY(-20px);}
         to {opacity: 100%;}
     }
     
@@ -874,7 +890,7 @@ a{
         margin-left: 30%;
         text-align: center;
         width: 400px;
-        animation: judy 1.5s forwards 2s;
+        animation: judy 1.5s forwards 1.2s;
     }
     
     @keyframes judy {
@@ -897,7 +913,7 @@ a{
         font-size: 25px;
         transform: translateY(0px);
         opacity: 0%;
-        animation: introtojudy 2s forwards 2s;    
+        animation: introtojudy 2s forwards 1.2s;    
     }
     
     @keyframes introtojudy{
@@ -917,17 +933,17 @@ a{
     }
     .shorten > #e{
         margin-right: 5%;
-        animation: welcome 1.5s forwards .5s;
+        animation: welcome 1.5s forwards .3s;
     }
     .shorten > #l{
         margin-left: 5%;
-        animation: welcome 1.5s forwards 1s;
+        animation: welcome 1.5s forwards .6s;
     }
     #c{
-        animation: welcome 1.5s forwards 1.5s;
+        animation: welcome 1.5s forwards .9s;
     }
     @keyframes welcome{
-        from {transform: translateY(-40px);}
+        from {transform: translateY(-20px);}
         to {opacity: 100%;}
     }
 
@@ -958,7 +974,7 @@ a{
 }
 
 
-@media only screen and (min-width: 2272px) and (max-width: 3000px){
+@media only screen and (min-width: 2272px) and (max-width: 5000px){
     
     .back{
         overflow-y: hidden;
@@ -977,7 +993,7 @@ a{
         margin-left: 30%;
         text-align: center;
         width: 490px;
-        animation: judy 1.5s forwards 2s;
+        animation: judy 1.5s forwards 1.2s;
     }
     
     @keyframes judy {
@@ -1000,7 +1016,7 @@ a{
         font-size: 25px;
         transform: translateY(0px);
         opacity: 0%;
-        animation: introtojudy 2s forwards 2s;    
+        animation: introtojudy 2s forwards 1.2s;    
     }
     
     @keyframes introtojudy{
@@ -1020,18 +1036,18 @@ a{
     }
     .shorten > #e{
         margin-right: 5%;
-        animation: welcome 1.5s forwards .5s;
+        animation: welcome 1.5s forwards .3s;
     }
     .shorten > #l{
         margin-left: 5%;
-        animation: welcome 1.5s forwards 1s;
+        animation: welcome 1.5s forwards .6s;
     }
     #c{
-        animation: welcome 1.5s forwards 1.5s;
+        animation: welcome 1.5s forwards .9s;
     }
 
     @keyframes welcome{
-        from {transform: translateY(-40px);}
+        from {transform: translateY(-20px);}
         to {opacity: 100%;}
     }
     
