--- a/code port/code.css
+++ b/code port/code.css
@@ -83,7 +83,7 @@ a{
 }
 
 .project > h2{
-    margin-top: 10%;
+    margin-top: 6%;
     animation: popUp 1.5s forwards;
     margin-bottom: 1%;
     opacity: 0%;
@@ -119,7 +119,7 @@ a{
     transition: .3s ease;
 }
 
-.evidence, .linkslide, .linkgit{
+.evidence, .linkslide, .linkgit, .cgfslide, .cgfcode{
     position: relative;
     display: block;
 }
@@ -138,7 +138,7 @@ a{
 	filter: blur(1.5px) grayscale(100%);
 }
 
-.linkslide .text, .linkgit .text{    
+.linkslide .text, .linkgit .text, .cgfslide .text, .cgfcode .text{    
     position: absolute;
     top: 50%;
     left: 50%;  
@@ -153,7 +153,11 @@ a{
     transition: .5s ease; 
 }
  
-.linkslide:hover .text, .linkgit:hover .text{
+.cgfcode .text, .linkgit .text{
+    padding: 1% 5%;
+}
+
+.linkslide:hover .text, .linkgit:hover .text, .cgfslide:hover .text, .cgfcode:hover .text{
     opacity: 100%;
 }
 
@@ -164,6 +168,9 @@ a{
     background-color: rgba(17, 117, 167, 0.904);
 }
 
+.cgfslide .text:hover, .cgfcode .text:hover{
+    background-color: mediumaquamarine;
+}
 
 .explain{
     margin: auto;
@@ -228,6 +235,11 @@ a{
 
 .next{
     right:0;
+    margin-right: 1%;
+}
+
+.prev{
+    margin-left: 1%;
 }
 
 /* On hover, add a black background color with a little bit see-through */
