--- a/contact/contact.css
+++ b/contact/contact.css
@@ -80,7 +80,7 @@ body{
 }
 
 .allChoices{
-  margin-top: 5%;
+  margin-top: 10%;
 }
 
 .reachOpt{
@@ -94,6 +94,11 @@ body{
   margin: auto;
 }
 
+.title{
+  margin-top: 10%;
+  margin-bottom: 4%;
+}
+
 .sub{
   cursor: pointer;
   border: black solid 2px;
@@ -103,42 +108,70 @@ body{
   user-select: none;
 }
 
-@keyframes slideawayL{  /*Email to Linkedin | LinkedIn to Github */
+@keyframes fadeout{
   from {}
-  to {opacity: 0%; transform: translateX(-20px);}
+  to {opacity: 0%;}
 }
 
-@keyframes slideawayR{  /*Email to Github | Github to Linkedin */
-  from {}
-  to {opacity: 0%; transform: translateX(20px);}
-}
-
-@keyframes slideinL{  /*From Email to Github  | From Github to Linkedin */
-  from {opacity: 0%; transform: translateX(-20px);}
+@keyframes fadein{
+  from {opacity: 0%;}
   to {}
-}
-
-@keyframes slideinR{  /*From Email to Linkedin | From LinkedIn to Github*/
-  from {opacity: 0%; transform: translateX(20px);}
-  to{}
 }
 
 /* GitHub Section */
 
 .githubSection{
-  border: solid 2px black;
-  border-radius: 25px;
-  padding: 5%;
   min-width: 400px;
   max-width: 500px;
 }
 
-/* Email Section */
-
-.title{
-  margin-top: 8%;
-  margin-bottom: 4%;
+.gitinfo, .iconBack, .more{
+  border: solid black 2px;
+  padding: 2%;
 }
+
+.iconBack{
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom: none;
+}
+
+.gitinfo{
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.iconBack > img{
+  text-align: left;
+  border: solid black 2px;
+  border-radius: 100px;
+}
+
+.rps{
+  margin-top: 2%;
+  padding-top: 2%;
+  border: solid black 2px;
+  border-radius: 15px;
+}
+
+.rps h3{
+  border-bottom: solid 1px;
+  border-image: linear-gradient(90deg, rgba(0,0,0,0), #000000da, #000000da, rgba(0,0,0,0)) 1;
+}
+
+.website, .klicky{
+  padding: 5%;
+  cursor: pointer;
+}
+
+.more{
+  margin-top : 2%;
+  cursor: pointer;
+  border-bottom: solid black 2px;
+  border-radius: 15px;
+}
+
+/* Email Section */
 
 .email{
   margin: auto;
