--- a/contact/contact.css
+++ b/contact/contact.css
@@ -77,10 +77,12 @@
 body{
   text-align: center;
   margin: auto; 
+  user-select: none;
+  overflow-y: auto;
 }
 
 .allChoices{
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .reachOpt{
@@ -95,17 +97,23 @@ body{
 }
 
 .title{
-  margin-top: 10%;
+  margin-top: 8%;
   margin-bottom: 4%;
 }
 
 .sub{
+  background-color: whitesmoke;
+  transition: .3s ease;
   cursor: pointer;
   border: black solid 2px;
-  border-radius: 20px;
+  border-radius: 15px;
   padding: .5%;
   margin: auto;
-  user-select: none;
+}
+
+.sub:hover{
+  background-color: black;
+  color: white;
 }
 
 @keyframes fadeout{
@@ -118,6 +126,7 @@ body{
   to {}
 }
 
+
 /* GitHub Section */
 
 .githubSection{
@@ -128,12 +137,16 @@ body{
 .gitinfo, .iconBack, .more{
   border: solid black 2px;
   padding: 2%;
+  background-color: whitesmoke;
 }
 
 .iconBack{
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   border-bottom: none;
+  background-image: url(../portfolio/other/temp\ cover.png);
+  background-size: cover;
+  background-position: right 30% bottom 90%;
 }
 
 .gitinfo{
@@ -149,7 +162,6 @@ body{
 
 .rps{
   margin-top: 2%;
-  padding-top: 2%;
   border: solid black 2px;
   border-radius: 15px;
 }
@@ -157,11 +169,31 @@ body{
 .rps h3{
   border-bottom: solid 1px;
   border-image: linear-gradient(90deg, rgba(0,0,0,0), #000000da, #000000da, rgba(0,0,0,0)) 1;
+  padding-top: 2%;
+  background-color: gainsboro;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .website, .klicky{
   padding: 5%;
   cursor: pointer;
+  background-color: whitesmoke;
+  transition: .3s ease;
+}
+
+.website:hover, .klicky:hover{
+  background-color: darkslategrey;
+  color: white;
+}
+
+.website:hover p, .klicky:hover p{
+  text-decoration: underline white;
+}
+
+.klicky{
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 
 .more{
@@ -169,24 +201,34 @@ body{
   cursor: pointer;
   border-bottom: solid black 2px;
   border-radius: 15px;
+  background-color: gainsboro;
+  transition: .3s ease;
+}
+
+.more:hover{
+  background-color: darkslategrey;
+  color: white;
 }
 
 /* Email Section */
 
 .email{
   margin: auto;
-  border: solid rgba(48, 25, 25, 0.884) 2px;
-  border-radius: 20px;
+  border: solid rgba(0, 0, 0, 0.884) 2px;
+  border-radius: 15px;
   min-width: 600px;
   margin-bottom: 1%;
   box-shadow: rgb(122, 9, 9) 1px 1px;
 }
 
 .whotoandfrom:not(.except){
-  border-bottom: solid rgba(48, 25, 25, 0.884) 2px;
+  border-bottom: solid rgba(0, 0, 0, 0.884) 2px;
   padding: 1%;
   display: flex;
   justify-content: space-evenly;
+  background-color: whitesmoke;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .border{
@@ -227,7 +269,7 @@ button{
 #gobutton:hover, #sendbutton:hover{
   transform: scale(115%);
   box-shadow: none;
-  background-color: rgba(65, 9, 9, 0.137);
+  background-color: whitesmoke;
 }
 
 a{
@@ -285,6 +327,7 @@ a{
   padding: 2%;
   margin-bottom: 2%;
   border-radius: 5px;
+  background-color: whitesmoke;
 }
 
 .info{
@@ -292,19 +335,29 @@ a{
 }
 
 .linkedIn{
-  border: solid black 2px;
+  padding: 1%;
+  border: solid 2px black;
+  background-color: whitesmoke;
 }
 
 #me{
-  border: solid 2px black;
+  border: solid 2px white;
   border-radius: 50%;
-  margin: 1%;
+  position: absolute;
+  bottom: 5%;
+  left: 1%;
+  user-select: none;
 }
 
 .backDrop{
+  padding: 11%;
+  border-radius: 5px;
   text-align: left;
   border-bottom: solid 2px;
-  border-image: linear-gradient(90deg, rgba(0,0,0,0), #000000da, #000000da, rgba(0,0,0,0)) 1;
+  border-image: linear-gradient(90deg, rgba(0, 0, 0, 0), rgb(0, 0, 0), rgb(0, 0, 0), rgba(0,0,0,0)) 1;
+  background-image: url(../assests/backdrop.png);
+  background-size: cover;
+  position: relative;
 }
 
 .bio{
@@ -312,8 +365,15 @@ a{
 }
 
 .connect{
-  border: solid 2px black;
+  border: solid 2px rgb(0, 119, 181);
+  color: rgb(0, 119, 181);
   cursor: pointer;
+  transition: .3s ease;
+}
+
+.connect:hover{
+  background-color: rgb(0, 119, 181);
+  color: white;
 }
 
 #githubChoice, #linkedinChoice{
