--- a/code port/code.css
+++ b/code port/code.css
@@ -77,6 +77,7 @@
 body{
     margin: 0px;
     user-select: none;
+    background-color: rgba(224, 255, 255, 0.212);
 }
 
 a{
@@ -184,6 +185,7 @@ a{
 }
 
 .explain > p{
+    background-color: whitesmoke;
     margin: 2%;
     margin-bottom: 0%;
     padding: 2%;
