--- a/portfolio/drawings.css
+++ b/portfolio/drawings.css
@@ -3,6 +3,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: bold;
   }
   
   .navwrap{
