--- a/contact/contact.css
+++ b/contact/contact.css
@@ -227,6 +227,7 @@ body{
 
 .more{
   margin-top : 2%;
+  margin-bottom: 5%;
   cursor: pointer;
   border-bottom: solid black 2px;
   border-radius: 15px;
