--- a/01_about/style.css
+++ b/01_about/style.css
@@ -103,6 +103,7 @@ nav{
         font-size: 1.5rem;
     }
     #mobIcon{
+        filter: brightness(0) saturate(100%) invert(100%) sepia(9%) saturate(7498%) hue-rotate(180deg) brightness(104%) contrast(116%);
         cursor: pointer;
     }
     .mobNav{
