--- a/01_about/style.css
+++ b/01_about/style.css
@@ -299,21 +299,25 @@ footer{
 @media screen and (max-width:858px){
     .intro{
         flex-direction: column;
+        height: 200vh;
     }
     .whoImg, .whoDat{
         width: 100%;
-        height: 50%;
+        height: 100vh;
     }
     .whoDat{
         padding: 0px;
         padding-top: 5%;
         background-image: url(../00_assets/svgs/mframe.svg);
     }
+    .whoImg{
+        height: 100vh;
+    }
     .datWho p{
         margin-left: 5%;
         margin-right: 5%;
-        overflow-y: auto;
-        height: 85%;
+        /* overflow-y: auto;
+        height: 85%; */
     }
     
     .follow img{
@@ -324,6 +328,9 @@ footer{
     }
 }
 @media screen and (max-width: 600px){
+    #meet{
+        height: 30%;
+    }
     .follow{
         flex-direction: column;
         align-items: center;
@@ -332,6 +339,9 @@ footer{
     }
 }
 @media screen and (max-width: 425px){
+    #meet{
+        height: 25%;
+    }
     #followUp{
         margin-top: 5%;
     }
