--- a/02_projects/style.css
+++ b/02_projects/style.css
@@ -143,7 +143,7 @@ nav{
     user-select: none;
     font-size: 5rem;
     transition: .3s ease-in-out;
-    box-shadow: black 5px 5px;
+    box-shadow: black 0px 5px;
     cursor: default;
 }
 #cShow:hover{
@@ -210,11 +210,11 @@ nav{
     transition: .3s ease;
 }
 .projectLeft:hover .projectImg{
-    transform: scale(105%);
+    transform: translateX(10px) scale(105%);
     box-shadow: rgba(0, 0, 0, 0.158) 5px 5px 5px 5px;
 }
 .projectRight:hover .projectImg{
-    transform: scale(105%);
+    transform: translateX(-10px) scale(105%);
     box-shadow: rgba(0, 0, 0, 0.158) -5px 5px 5px 5px;
 }
 .projectTitle{
