--- a/02_projects/02_projectDetails/style.css
+++ b/02_projects/02_projectDetails/style.css
@@ -136,11 +136,16 @@ nav{
 .topContainer{
     margin-top: 10vh;
     padding: 5%;
+    padding-left: 15vw;
+    padding-right: 15vw;
     border-bottom: solid 1px;
     background-color: white;
 }
 .brief{
     text-align: center;
+}
+.topContainer p {
+    line-height: 200%;
 }
 
 /* Content */
@@ -153,8 +158,14 @@ nav{
 .projectPurpose{
     padding-top: 10vh;
 }
+.solutionSection{
+    padding-top: 10vh;
+}
 .dSect{
     padding-bottom: 5vh;
+}
+.projectView{
+    width: 70vw;
 }
 .imageWrap{
     position: relative;
@@ -164,18 +175,17 @@ nav{
     position: absolute;
     top: 0;
     bottom:0;
-    left: 0;
+    left: 100;
     right: 0;
-    background: black;
-    color: white;
+    background: rgba(255, 255, 255, 0.856);
+    color: black;
     visibility: hidden;
     opacity: 0%;
     padding: 5% 0%;
     transition: .3s ease;
     display: flex;
-    width: 100%;
+    width: 10%;
     align-self: center; 
-    text-align: center;
 }
 .coverText{
     width: 100%;
@@ -183,10 +193,9 @@ nav{
 }
 .coverSymb{
     width: 100%;
-    text-align: end;
-    margin-right: 5%;
+    text-align: center;
     font-size: 2em;
-    animation: go 1s infinite;
+    animation: go 1.5s infinite;
 }
 @keyframes go{
     from {}
@@ -196,7 +205,7 @@ nav{
 .imageWrap:hover .viewImage{
     visibility: visible;
     opacity: 100%;
-    box-shadow: rgba(0, 0, 0, 0.315) 0px 5px 5px;
+    box-shadow: rgba(0, 0, 0, 0.116) 0px 5px 5px;
 }
 
 /* Progress Bar */
@@ -214,7 +223,7 @@ nav{
     width: 50%;
     text-align: center;
     transition: .3s ease;
-    padding: 2%;
+    padding: 1.5%;
 }
 #pb1:hover,#pb2:hover{
     background-color: aliceblue;
