implemented more design into project details

--- a/01_about/style.css
+++ b/01_about/style.css
@@ -13,6 +13,10 @@ a, li{
     all: unset;
     cursor: pointer;
 }
+::selection {
+    color: white;
+    background: rgb(247,75,91);
+}
 
 /*NAVBAR*/
 nav{
