Implemented previous button

--- a/02_projects/02_projectDetails/style.css
+++ b/02_projects/02_projectDetails/style.css
@@ -181,7 +181,6 @@ nav{
     position: absolute;
     top: 0;
     bottom:0;
-    left: 100;
     right: 0;
     background: rgba(255, 255, 255, 0.856);
     color: black;
@@ -191,7 +190,7 @@ nav{
     transition: .3s ease;
     display: flex;
     width: 10%;
-    align-self: center; 
+    align-self: center;
 }
 .coverText{
     width: 100%;
@@ -238,8 +237,11 @@ nav{
 /* Next */
 #nextProject{
     display: flex;
-    justify-content: center;
-    padding: 10vh;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    width: 100%;
     background-color: aliceblue;
 }
 #nextProject button{
@@ -247,7 +249,7 @@ nav{
     background-color: black;
     color:white;
     border-radius: 10px;
-    width: 70%;
+    width: 30%;
     padding: 2%;
     text-align: center;
     cursor: pointer;
@@ -279,9 +281,21 @@ footer{
 }
 
 @media screen and (max-width:858px) {
+    .projectView{
+        width: 100%;
+    }
+    .viewImage{
+        visibility: visible;
+        opacity: 100%;
+    }
     #nextProject{
         padding: 0px;
-        padding-top: 10vh;
-        padding-bottom: 10vh;
+        padding-bottom: 7vh;
+        flex-direction: column;
+        align-items: center;
+    }
+    #nextProject button{
+        width: 70%;
+        margin-top: 7vh;
     }
 }
