--- a/02_projects/02_projectDetails/style.css
+++ b/02_projects/02_projectDetails/style.css
@@ -270,6 +270,10 @@ nav{
 #elink:hover{
     color: red;
 }
+.disabled{
+    pointer-events: none;
+}
+
 /* Footer */
 footer{
     text-align: center;
