--- a/02_cases/00_caseDetails/style.css
+++ b/02_cases/00_caseDetails/style.css
@@ -32,7 +32,7 @@ nav{
     align-items: center;
     z-index: 100;
     color: white;
-    background-color: #C33948;
+    background-color: #c33949fa;
 }
 #me_index{
     margin-left: 5%;
@@ -294,14 +294,83 @@ small{
 
 /* Footer */
 footer{
-    text-align: center;
-    padding-top: .5%;
-    padding-bottom: .5%;
-    color: black;
-    width: 100%;
-    border-top: solid 2px;
+    background-color: #C33948;
+    color: white;
+    font-family: "Work Sans", "serif";
+    height: fit-content;
+    padding-top: 2%;
+    padding-left: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+#foot img{
+    filter: brightness(0) saturate(100%) invert(100%) sepia(9%) saturate(7498%) hue-rotate(180deg) brightness(104%) contrast(116%);
+}
+#email{
+    margin-top: 0%;
+    font-weight: 200;
+}
+#cr{
+    font-weight: 200;
+    color: white;
+    text-align: right;
+    padding-right: 2%;
+}
+#followUp{
+    font-size: 1.5em;
+    font-weight: 300;
+    text-align: left;
+}
+.follow{
+    padding-top: 1%;
+    width: 20%;
+    display: flex;
+    justify-content: space-between;
+}
+.follow a{
+    transition: .3s ease;
+}
+.follow a:hover{
+    transform: scale(110%);
+}
+.follow img{
+    width: 2em;
+}
+#up1{
+    animation: t1 5s infinite ease-in-out;
+} 
+#up2{
+    animation: t2 5s infinite ease-in-out;
+}
+#up3{
+    animation: t3 5s infinite ease-in-out;
+} 
+
+/* animations */
+@keyframes t1{
+    from {transform: translateY(0px);}
+    10% {transform: translateY(-5px);}
+    20% {transform: translateY(0px);}
+    30% {}
+    to {}
+}
+@keyframes t2{
+    from {}
+    10% {transform: translateY(0px);}
+    20% {transform: translateY(-5px);}
+    30% {transform: translateY(0px);}
+    to {}
+}
+@keyframes t3{
+    from {}
+    10% {}
+    20% {transform: translateY(0px);}
+    30% {transform: translateY(-5px);}
+    40% {transform: translateY(0px);}
 }
 
+/* responsive */
 @media screen and (max-width:858px) {
     .projectView{
         width: 100%;
