fixed adjacent elements

--- a/01_work/style.css
+++ b/01_work/style.css
@@ -277,12 +277,16 @@ nav{
     display: flex;
     width: 10%;
     align-self: center;
+    cursor: pointer;
 }
 .coverSymb{
+    user-select: none;
     width: 100%;
     text-align: center;
     font-size: 2em;
-    animation: go 1.5s infinite;
+}
+.coverSymb:hover .case{
+    transform: scale(102%);
 }
 .case:hover .viewImage{
     visibility: visible;
